# tic-tac-toe-server

./: client.spec  main.py  pyproject.toml  server.ini  server.spec
screens/: splash.py  tictactoe.py
templates/: menu.kv  tictactoe.kv
